--- a/index.html
+++ b/index.html
@@ -254,21 +254,28 @@
         <h1 class="feedbacks-title">Feedbacks From Our Clients</h1>
         <div class="feedback-box">
             <div class="feedback">
-                <p class="feedback-text"><sup class="comma">"</sup>From Desh capital I got best service</p>
-                <p class="feedback-by"><sup class="comma">"</sup>_Shadik</p>
+                <p class="feedback-text"><sup class="comma">"</sup> The staff at Desh Capital LLC gave me exceptional customer service throughout the whole mortgage application process. They were constantly available to respond to my queries and address any issues I could have.</p>
+                <p class="feedback-by"><sup class="comma">"</sup>_Shadik Hasan</p>
             </div>
 
             <div class="feedback">
-                <p class="feedback-text"><sup class="comma">"</sup>I take service from there. They are so wonderful. They solve my problem very easily. I like them so much. Desh Capital LLC is wonderful.</p>
+                <p class="feedback-text"><sup class="comma">"</sup> Desh Capital LLC handled the mortgage application procedure professionally, and I was able to submit my application without any delays.</p>
                 <p class="feedback-by"><sup class="comma">"</sup>_Srabon</p>
             </div>
 
             <div class="feedback">
-                <p class="feedback-text"><sup class="comma">"</sup>Lorem ipsum dolor, sit amet consectetur adipisicing
-                    elit. Rem repellat
-                    veritatis qui. Dignissimos, laborum eos voluptatibus molestiae similique architecto accusamus animi
-                    provident delectus minima exercitationem, repellat ipsam laudantium praesentium veniam.</p>
-                <p class="feedback-by"><sup class="comma">"</sup>_Shadik</p>
+                <p class="feedback-text"><sup class="comma">"</sup>I was able to save money over time since Desh Capital LLC provided rates that were more affordable than those I could find elsewhere.</p>
+                <p class="feedback-by"><sup class="comma">"</sup>_Oassi</p>
+            </div>
+
+            <div class="feedback">
+                <p class="feedback-text"><sup class="comma">"</sup>Every step of the mortgage process was explained to me by Desh Capital LLC, and they were open and honest about all the costs and expenses related to the loan.</p>
+                <p class="feedback-by"><sup class="comma">"</sup>_Sg</p>
+            </div>
+
+            <div class="feedback">
+                <p class="feedback-text"><sup class="comma">"</sup>The Desh Capital LLC team impressed me with their professionalism by treating me with respect and courtesy at all times.</p>
+                <p class="feedback-by"><sup class="comma">"</sup>_Minhaj</p>
             </div>
 
 
