--- a/index.html
+++ b/index.html
@@ -88,48 +88,38 @@
             <div>
                 <h1 class="left-side-title">Today's Mortgage Rate <br> ( আজকের মর্টগেজ রিপোর্ট )</h1>
                 <p class="left-side-text">This is today's mortgage rate. For more update see here</p>
-
-                <div class="card-slider">
-                    <div class="card-slide">
-                        <div class="card">
-                            <h5 class="tm-title">30 Year Fixed</h5>
-                            <p class="tm-txt">6.67%<sub>(Current)</sub></p>
-                            <p class="tm-txt">+0.12%<sub>(1 Day)</sub></p>
-                            <p class="red"><i class="fas fa-arrow-up"></i></p>
-                        </div>
+                <div class="slider-container">
+                    <div class="slide-card">
+                        <h5 class="tm-title">30 Year Fixed</h5>
+                        <p class="tm-txt">6.67%<sub>(Current)</sub></p>
+                        <p class="tm-txt">+0.12%<sub>(1 Day)</sub></p>
+                        <p class="red"><i class="fas fa-arrow-up"></i></p>
                     </div>
-                    <div class="card-slide">
-                        <div class="card">
-                            <h5 class="tm-title">15 Year Fixed</h5>
-                            <p class="tm-txt">6.08%<sub>(Current)</sub></p>
-                            <p class="tm-txt">+0.10%<sub>(1 Day)</sub></p>
-                            <p class="red"><i class="fas fa-arrow-up"></i></p>
-                        </div>
+                    <div class="slide-card">
+                        <h5 class="tm-title">15 Year Fixed</h5>
+                        <p class="tm-txt">6.08%<sub>(Current)</sub></p>
+                        <p class="tm-txt">+0.10%<sub>(1 Day)</sub></p>
+                        <p class="red"><i class="fas fa-arrow-up"></i></p>
                     </div>
-                    <div class="card-slide">
-                        <div class="card">
-                            <h5 class="tm-title">30 Year FHA</h5>
-                            <p class="tm-txt">6.15%<sub>(Current)</sub></p>
-                            <p class="tm-txt">+0.10%<sub>(1 Day)</sub></p>
-                            <p class="red"><i class="fas fa-arrow-up"></i></p>
-                        </div>
+                    <div class="slide-card">
+                        <h5 class="tm-title">30 Year FHA</h5>
+                        <p class="tm-txt">6.15%<sub>(Current)</sub></p>
+                        <p class="tm-txt">+0.10%<sub>(1 Day)</sub></p>
+                        <p class="red"><i class="fas fa-arrow-up"></i></p>
                     </div>
-                    <div class="card-slide">
-                        <div class="card">
-                            <h5 class="tm-title">30 Year Jumbo</h5>
-                            <p class="tm-txt">6.16%<sub>(Current)</sub></p>
-                            <p class="tm-txt">+0.04%<sub>(1 Day)</sub></p>
-                            <p class="red"><i class="fas fa-arrow-up"></i></p>
-                        </div>
+                    <div class="slide-card">
+                        <h5 class="tm-title">30 Year Jumbo</h5>
+                        <p class="tm-txt">6.16%<sub>(Current)</sub></p>
+                        <p class="tm-txt">+0.04%<sub>(1 Day)</sub></p>
+                        <p class="red"><i class="fas fa-arrow-up"></i></p>
                     </div>
-                    <div class="card-slide">
-                        <div class="card">
-                            <h5 class="tm-title">5/1 ARM</h5>
-                            <p class="tm-txt">6.14%<sub>(Current)</sub></p>
-                            <p class="tm-txt">-0.21%<sub>(1 Day)</sub></p>
-                            <p class="green"><i class="fas fa-arrow-down"></i></p>
-                        </div>
+                    <div class="slide-card">
+                        <h5 class="tm-title">5/1 ARM</h5>
+                        <p class="tm-txt">6.14%<sub>(Current)</sub></p>
+                        <p class="tm-txt">-0.21%<sub>(1 Day)</sub></p>
+                        <p class="green"><i class="fas fa-arrow-down"></i></p>
                     </div>
+            
                 </div>
 
 
