--- a/contactUs.html
+++ b/contactUs.html
@@ -98,21 +98,23 @@
                     </div>
                     <div class="contact-sec">
                         <h1 class="contact-infos-title">Contact Message</h1>
-                        <form class="contact-form" action="">
+                        <form class="contact-form" action="" autocomplete="off">
                             <label class="contact-form-label" for="name">Name:</label><br>
-                            <input class="contact-form-input" type="text" name="" id="" placeholder="Enter Name"><br>
+                            <input class="contact-form-input" type="text" name="name" id="" placeholder="Enter Name" required><br>
                             <label class="contact-form-label" for="email">Email:</label><br>
-                            <input class="contact-form-input" type="text" name="" id="" placeholder="Enter Email"><br>
+                            <input class="contact-form-input" type="email" name="email" id="" placeholder="Enter Email" required><br>
                             <label class="contact-form-label" for="phone">Phone:</label><br>
-                            <input class="contact-form-input" type="text" name="" id="" placeholder="Enter Phone"><br>
+                            <input class="contact-form-input" type="text" name="phone" id="" placeholder="Enter Phone" required><br>
                             <label class="contact-form-label" for="subject">Subject:</label><br>
-                            <input class="contact-form-input" type="text" name="" id="" placeholder="Enter Subject"><br>
+                            <input class="contact-form-input" type="text" name="subject" id="" placeholder="Enter Subject"><br>
                             <label class="contact-form-label" for="message">Message:</label><br>
-                            <textarea class="contact-form-input" rows="5" name="" id="" placeholder="Enter Message Here"></textarea><br>
+                            <textarea class="contact-form-input" rows="5" name="message" id="" placeholder="Enter Message Here" required></textarea><br>
+                    <h1 class="submit-message" id="msg"></h1>
+
 
                             <div class="contact-form-btn">
                                 <button class="contact-form-btn-reset" type="reset">Reset</button>
-                                <button class="contact-form-btn-submit" type="submit">Submit</button>
+                                <button class="contact-form-btn-submit" type="submit" id="sub" onclick="myFunction()">Submit</button>
                             </div>
                         </form>
                     </div>
@@ -177,6 +179,7 @@
 
     <!-- JAVASCRIPT FILE LINK -->
     <script src="Javascript/headers.js"></script>
+    <script src="Javascript/contactus.js"></script>
     <script src="Javascript/footer.js"></script>
 </body>
 
