--- a/contactUs.html
+++ b/contactUs.html
@@ -157,6 +157,7 @@
                 <input name="name" class="inputs" type="text" placeholder="Please Enter Your Name">
                 <textarea name="comment" id="comment" class="inputs" rows="5" placeholder="Please Enter Your Feedbacks"
                     required></textarea>
+                    <h1 class="submit-message" id="msg"></h1>
                 <button type="submit" id="sub" class="feedback-btn" onclick="myFunction()">Submit</button>
             </form>
 
@@ -175,12 +176,13 @@
             </ul>
         </div>
     </footer>
+    <p class="footer-version">@ V-0.0.0.1 @</p>
     <!-- FOOTER END -->
 
     <!-- JAVASCRIPT FILE LINK -->
     <script src="Javascript/headers.js"></script>
     <script src="Javascript/contactus.js"></script>
-    <script src="Javascript/footer.js"></script>
+    <script src="Javascript/feedback.js"></script>
 </body>
 
 </html>
