--- a/calculator.html
+++ b/calculator.html
@@ -156,12 +156,7 @@
     <footer class="footer">
         <div class="about">
             <h1 class="footer-title">About Us</h1>
-            <p class="footer-text">As the owner of Desh Capital LLC, I am committed to helping my clients achieve their
-                dream of homeownership. With years of experience in the mortgage industry, I provide personalized
-                service and attention to detail to identify the best mortgage solution for each client's unique needs
-                and goals. I pride myself on honesty, integrity, and professionalism, and am dedicated to building
-                long-term relationships with my clients to help them achieve their financial dreams. Choose Desh Capital
-                LLC for a positive and successful mortgage experience.</p>
+            <p class="footer-text">As the owner of Desh Capital LLC, I am committed to helping my clients achieve their dream of homeownership. With years of experience in the mortgage industry, I provide personalized service and attention to detail to identify the best mortgage solution for each client's unique needs and goals. I pride myself on honesty, integrity, and professionalism, and am dedicated to building long-term relationships with my clients to help them achieve their financial dreams. Choose Desh Capital LLC for a positive and successful mortgage experience.</p>
             <p class="footer-text">Follow us on</p>
 
             <ul class="icon">
@@ -191,6 +186,7 @@
                 <input name="name" class="inputs" type="text" placeholder="Please Enter Your Name">
                 <textarea name="comment" id="comment" class="inputs" rows="5" placeholder="Please Enter Your Feedbacks"
                     required></textarea>
+                    <h1 class="submit-message" id="msg"></h1>
                 <button type="submit" id="sub" class="feedback-btn" onclick="myFunction()">Submit</button>
             </form>
 
@@ -209,12 +205,12 @@
             </ul>
         </div>
     </footer>
+    <p class="footer-version">@ V-0.0.0.1 @</p>
     <!-- FOOTER END -->
 
     <!-- JAVASCRIPT FILE LINK -->
-    <script src="Javascript/calculator.js"></script>
     <script src="Javascript/headers.js"></script>
-    <script src="Javascript/footer.js"></script>
+    <script src="Javascript/feedback.js"></script>
 </body>
 
 </html>
