--- a/contactUs.html
+++ b/contactUs.html
@@ -114,7 +114,7 @@
 
                             <div class="contact-form-btn">
                                 <button class="contact-form-btn-reset" type="reset">Reset</button>
-                                <button class="contact-form-btn-submit" type="submit" id="sub" onclick="myFunction()">Submit</button>
+                                <button class="contact-form-btn-submit" type="submit" id="sub" >Submit</button>
                             </div>
                         </form>
                     </div>
