--- a/faqs.html
+++ b/faqs.html
@@ -90,16 +90,19 @@
         <div class="collect-faqs-form">
             <form action="">
                 <label class="collect-faqs-label" for="name">Name:</label><br>
-                <input class="collect-faqs-input" type="text" placeholder="Enter Name"><br>
+                <input class="collect-faqs-input" type="text" name="name" placeholder="Enter Name" required><br>
 
                 <label class="collect-faqs-label" for="question">Question:</label><br>
-                <textarea class="collect-faqs-input textarea" name="" id="" rows="10"
-                    placeholder="Enter Questions Here"></textarea><br>
+                <textarea class="collect-faqs-input textarea" name="question" id="" rows="10"
+                    placeholder="Enter Questions Here" required></textarea><br>
 
-                <div class="collect-faqs-form-btn">
-                    <button class="collect-faqs-form-btn-reset" type="reset">Reset</button>
-                    <button class="collect-faqs-form-btn-submit" type="submit">Apply</button>
-                </div>
+                    <h1 class="submit-message" id="msg"></h1>
+
+
+                    <div class="collect-faqs-form-btn">
+                        <button class="collect-faqs-form-btn-reset" type="reset">Reset</button>
+                        <button class="collect-faqs-form-btn-submit" type="submit" id="sub" >Submit</button>
+                    </div>
             </form>
         </div>
     </section>
@@ -239,6 +242,7 @@
 
     <!-- JAVASCRIPT FILE LINK -->
     <script src="Javascript/headers.js"></script>
+    <script src="Javascript/faqs.js"></script>
     <script src="Javascript/feedback.js"></script>
 </body>
 
