--- a/calculator.html
+++ b/calculator.html
@@ -210,6 +210,7 @@
 
     <!-- JAVASCRIPT FILE LINK -->
     <script src="Javascript/headers.js"></script>
+    <script src="Javascript/calculator.js"></script>
     <script src="Javascript/feedback.js"></script>
 </body>
 
