--- a/aboutUs.html
+++ b/aboutUs.html
@@ -114,12 +114,11 @@
             <div class="team">
                 <img class="aboutus-img" src="Assets/Images/Team/mrf.jpg" alt="Loading...">
                 <h3 class="name">Maruf Ahmed</h3>
-                <h5 class="des">Designation</h5>
+                <h5 class="des">Broker-Owner</h5>
                 <ul class="team-icon">
-                    <li><a href="" target="_blank"><i class="fab fa-linkedin"></i></a></li>
                     <li><a href="https://www.facebook.com/mlomaruf" target="_blank"><i
                                 class="fab fa-facebook-square"></i></a></li>
-                    <li><a href="mailto:info@deshcapitalllc.com" target="_blank"><i class="fas fa-envelope"></i></a>
+                    <li><a href="mailto:contactmaruf@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
                     </li>
                 </ul>
             </div>
