--- a/mortgageInfo.html
+++ b/mortgageInfo.html
@@ -51,7 +51,7 @@
                     <li><a class="active" href="index.html">Home</a></li>
                     <li><a href="calculator.html">Calculator</a></li>
                     <li><a href="mortgageInfo.html">Mortgage Info.</a></li>
-                    <li><a href="loanPrograms.html">Loan Programs</a></li>
+                    <li><a href="documentList.html">Document List</a></li>
                     <li><a href="appointment.html">Appointment</a></li>
                     <li><a href="faqs.html">FAQs</a></li>
                     <li><a href="aboutUs.html">About Us</a></li>
@@ -69,7 +69,7 @@
             <ul class="bangla-section">
                 <li><a href="calculatorBangla.html">ক্যালকুলেটর</a></li>
                 <li><a href="mortgageInfoBangla.html">মটগেজ তথ্য</a></li>
-                <li><a href="loanProgramsBangla.html">লোন সমূহ</a></li>
+                <li><a href="documentListBangla.html">ডকুমেন্ট লিস্ট</a></li>
                 <li><a href="faqsBangla.html">প্রশ্ন ও উত্তর</a></li>
                 <li><a href="aboutUsBangla.html">আমাদের তথ্য</a></li>
                 <li><a href="contactUs.html">যোগাযোগ</a></li>
