--- a/documentList.html
+++ b/documentList.html
@@ -15,7 +15,7 @@
 
     <!-- CSS FILE LINK -->
     <link rel="stylesheet" href="Styles/headers.css">
-    <link rel="stylesheet" href="Styles/index.css">
+    <link rel="stylesheet" href="Styles/documentList.css">
     <link rel="stylesheet" href="Styles/footer.css">
 
 
@@ -81,6 +81,15 @@
     <!-- HEADER SECTION END -->
 
     <!-- MAIN SECTION START -->
+    <section class="document-lists">
+        <a class="switch-btn" href="documentListBangla.html">বাংলা</a>
+        <h1 class="document-lists-title">Initial Pre-Qualification Document List</h1>
+        <hr>
+        <div class="document-list">
+            <h5 class="document-list-title">For a Mortgage 'Pre-Approval' Letter pls send the following to </h5>
+
+        </div>
+    </section>
      <!-- MAIN SECTION END -->
 
     <!-- FOOTER START -->
