--- a/documentList.html
+++ b/documentList.html
@@ -87,6 +87,11 @@
         <hr>
         <div class="document-list">
             <h5 class="document-list-title">For a Mortgage 'Pre-Approval' Letter pls send the following to </h5>
+            <div class="mail-section">
+                <a href="mailto:maruf@deshcapitalllc.com" class="mail">maruf@deshcapitalllc.com</a>
+                <a  class="mail">OR Fax at (407) 305 7002 </a>
+            </div>
+
 
         </div>
     </section>
