--- a/aboutUsBangla.html
+++ b/aboutUsBangla.html
@@ -118,7 +118,7 @@
                 <ul class="team-icon">
                     <li><a href="https://www.facebook.com/mlomaruf" target="_blank"><i
                                 class="fab fa-facebook-square"></i></a></li>
-                    <li><a href="mailto:contactmaruf@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
+                    <li><a href="mailto:maruf@deshcapitalllc.com" target="_blank"><i class="fas fa-envelope"></i></a>
                     </li>
                 </ul>
             </div>
