--- a/documentList.html
+++ b/documentList.html
@@ -92,6 +92,12 @@
                 <a  class="mail">OR Fax at (407) 305 7002 </a>
             </div>
 
+            <div class="box">
+                <h5 class="box-text">The list below applies to EACH Mortgage APPLICANT(s) / Borrower(s) ONLY. <span class="color">Person(s) on Title but not on loan must only provide a copy of a valid ID.</span></h5>
+            </div>
+
+            <h5 class="document-list-header">(A) Basic Document Set for PURCHASE loan</h5>
+
 
         </div>
     </section>
