--- a/documentList.html
+++ b/documentList.html
@@ -97,6 +97,68 @@
             </div>
 
             <h5 class="document-list-header">(A) Basic Document Set for PURCHASE loan</h5>
+            <p class="document-list-text">
+                <ul class="document-list-list circle">
+                    <li><strong>Complete the credit pull authorization form (attached or online).</strong></li>
+                    <li>Copy of Govt. issued ID showing <strong>CURRENT address</strong> </li>
+                    <li>Copy of Social Security card/ ITIN number.</li>
+                    <li><strong>Last 2 months </strong>Personal bank statements-ALL pages, even blanks.</li>
+                    <li><strong>Last 30 days </strong>income statements* - pay stubs/ 1099 /rent /SSA 
+                        /SSI /Stock dividend /commission, etc are income also.</li>
+                        <li>Recent Personal Tax returns* - <strong>ALL pages </strong>with W2's /1099s etc. Prior </li>
+                        <li>Personal Tax returns* - <strong>ALL pages </strong>with W2's /1099s etc. </li>
+                </ul>
+            </p>
+            <h5 class="document-list-header">(B)  For Re-financing loan - + (A) </h5>
+            <p class="document-list-text">
+                <ul class="document-list-list square">
+                    <li>Current month's mortgage statement </li>
+                    <li>Current Home owner's insurance invoice copy</li>
+                    <li>HOA monthly/quarterly Statement, if any. </li>
+                    <li>LATEST monthly statement(s) for <strong>ALL items Refi is going to pay off.</strong></li>
+                    <li>Copy of lease, if the property is currently rented. </li>
+                </ul> 
+            </p>
+            <h5 class="document-list-header">(C) IF Self employed (25%+ owner of the business where you work) + (A)</h5>
+            <p class="document-list-text">
+                <ul class="document-list-list circle">
+                    <li> Last 2 years' business tax returns - ALL pages </li>
+                    <li>Last 2 months' business bank statements. </li>
+                </ul>
+            </p>
+            <h5 class="document-list-header">(D) For 2nd or further properties (even if shared with others) + (A)</h5>
+            <p class="document-list-text">
+                <ul class="document-list-list square">
+                   <li>For EACH property Owned ; </li> 
+                   <li>Last month's mortgage statement, if any</li>
+                   <li> Current Home owner's insurance invoice copy, if any.</li>
+                   <li>HOA monthly/quarterly Statement, if any</li>
+                   <li>Current Property Tax bill copy, all applicable</li>
+                   <li>Copy of lease, if the property is currently rented.</li>
+                </ul>
+                </p><br><br><br>
+                <p class="document-list-text">
+                    <ul class="document-list-list circle">
+                        <li>Advise in advance if you plan to use Gift/DPA funds </li>
+                        <li>Advise in advance if you are 1st time home buyer. </li>
+                        <li><strong>If you are missing any document - ask for an alternate document list.  - <u>Particular loan scenarios/programs may call for additional document(s)</u> - More information provided at the beginning helps a SMOOTH APPROVAL. </strong></li>
+                    </ul>
+                    </p>
+                    <div class="mail-section">
+                        <a href="mailto:maruf@deshcapitalllc.com" class="mail">maruf@deshcapitalllc.com</a>
+                        <a  class="mail">OR Fax at (407) 305 7002 </a>
+                    </div>
+                    <div class="button-text-section">
+                        <p class="document-list-text center">
+                            <ul class="document-list-list square">
+                                <li><strong>* NOT needed for No Income/ No Ratio/ Alternate document loans.</strong></li>
+                            </ul>
+                            </p>
+                            <div class="download-btns">
+                                <button class="download-btn" onclick="location.href='Assets/Documents/Initial_Pre-Qualification_Document_List.pdf';">Download This Document</button>
+                            </div>
+    
+                    </div>
 
 
         </div>
