--- a/index.html
+++ b/index.html
@@ -213,10 +213,10 @@
 
         <!-- Right Side Add Section START -->
         <div class="right-side">
-            <img class="right-side-img" src="Assets/Images/Adds.jpg" alt="Loading...">
-            <img class="right-side-img" src="Assets/Images/Adds 2.jpeg" alt="Loading...">
-            <img class="right-side-img" src="Assets/Images/Adds.jpg" alt="Loading...">
-            <img class="right-side-img" src="Assets/Images/Adds 2.jpeg" alt="Loading...">
+            <img class="right-side-img" src="Assets/Images/Adds/adds.jpeg" alt="Loading...">
+            <img class="right-side-img" src="Assets/Images/Adds/adds.jpeg" alt="Loading...">
+            <img class="right-side-img" src="Assets/Images/Adds/adds.jpeg" alt="Loading...">
+            <img class="right-side-img" src="Assets/Images/Adds/adds.jpeg" alt="Loading...">
         </div>
     </section>
     <!-- Right Side Add Section END -->
