--- a/index.html
+++ b/index.html
@@ -92,31 +92,36 @@
                     <div class="slide-card">
                         <h5 class="tm-title">30 Year Fixed</h5>
                         <p class="tm-txt">6.67%<sub>(Current)</sub></p>
-                        <p class="tm-txt">+0.12%<sub>(1 Day)</sub></p>
-                        <p class="red"><i class="fas fa-arrow-up"></i></p>
+                        <p class="tm-txt">-0.08%<sub>(1 Day)</sub></p>
+                        <!-- <p class="red"><i class="fas fa-arrow-up"></i></p> -->
+                        <p class="green"><i class="fas fa-arrow-down"></i></p>
                     </div>
                     <div class="slide-card">
                         <h5 class="tm-title">15 Year Fixed</h5>
-                        <p class="tm-txt">6.08%<sub>(Current)</sub></p>
-                        <p class="tm-txt">+0.10%<sub>(1 Day)</sub></p>
-                        <p class="red"><i class="fas fa-arrow-up"></i></p>
+                        <p class="tm-txt">6.05%<sub>(Current)</sub></p>
+                        <p class="tm-txt">-0.07%<sub>(1 Day)</sub></p>
+                        <!-- <p class="red"><i class="fas fa-arrow-up"></i></p> -->
+                        <p class="green"><i class="fas fa-arrow-down"></i></p>
                     </div>
                     <div class="slide-card">
                         <h5 class="tm-title">30 Year FHA</h5>
-                        <p class="tm-txt">6.15%<sub>(Current)</sub></p>
-                        <p class="tm-txt">+0.10%<sub>(1 Day)</sub></p>
-                        <p class="red"><i class="fas fa-arrow-up"></i></p>
+                        <p class="tm-txt">6.25%<sub>(Current)</sub></p>
+                        <p class="tm-txt">-0.03%<sub>(1 Day)</sub></p>
+                        <!-- <p class="red"><i class="fas fa-arrow-up"></i></p> -->
+                        <p class="green"><i class="fas fa-arrow-down"></i></p>
                     </div>
                     <div class="slide-card">
                         <h5 class="tm-title">30 Year Jumbo</h5>
-                        <p class="tm-txt">6.16%<sub>(Current)</sub></p>
-                        <p class="tm-txt">+0.04%<sub>(1 Day)</sub></p>
-                        <p class="red"><i class="fas fa-arrow-up"></i></p>
+                        <p class="tm-txt">6.20%<sub>(Current)</sub></p>
+                        <p class="tm-txt">+0.00%<sub>(1 Day)</sub></p>
+                        <!-- <p class="red"><i class="fas fa-arrow-up"></i></p> -->
+                        <!-- <p class="green"><i class="fas fa-arrow-down"></i></p> -->
+                        <p class="orange"><i class="fas fa-minus"></i></p>
                     </div>
                     <div class="slide-card">
                         <h5 class="tm-title">5/1 ARM</h5>
-                        <p class="tm-txt">6.14%<sub>(Current)</sub></p>
-                        <p class="tm-txt">-0.21%<sub>(1 Day)</sub></p>
+                        <p class="tm-txt">6.80%<sub>(Current)</sub></p>
+                        <p class="tm-txt">-0.05%<sub>(1 Day)</sub></p>
                         <p class="green"><i class="fas fa-arrow-down"></i></p>
                     </div>
             
