--- a/aboutUs.html
+++ b/aboutUs.html
@@ -67,7 +67,6 @@
         <!-- NAV BAR BANGLA START -->
         <div class="bangla">
             <ul class="bangla-section">
-                <li><a href="calculatorBangla.html">ক্যালকুলেটর</a></li>
                 <li><a href="mortgageInfoBangla.html">মটগেজ তথ্য</a></li>
                 <li><a href="documentListBangla.html">ডকুমেন্ট লিস্ট</a></li>
                 <li><a href="faqsBangla.html">প্রশ্ন ও উত্তর</a></li>
@@ -125,7 +124,7 @@
             <div class="team">
                 <img class="aboutus-img" src="Assets/Images/Team/shadik.jpg" alt="Loading...">
                 <h3 class="name">Shadik Hasan</h3>
-                <h5 class="des">CIO</h5>
+                <h5 class="des">CTO</h5>
                 <ul class="team-icon">
                     <li><a href="https://www.linkedin.com/in/shadik-hasan-2ba56b1ab/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
                     <li><a href="https://www.facebook.com/md.shadikhasansk/" target="_blank"><i
@@ -181,9 +180,7 @@
         </div>
         <div class="contact">
             <h1 class="footer-title">Contact Us</h1>
-            <iframe title="" class="maps"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4248.400548399734!2d-81.48490118459267!3d28.324574404702034!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88dd8185579284d3%3A0xeda2f0ec1ecbeecb!2s2627%20Chatham%20Cir%2C%20Kissimmee%2C%20FL%2034746%2C%20USA!5e1!3m2!1sen!2sbd!4v1679847804749!5m2!1sen!2sbd"
-                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <h3 class="nmls">NMLS 2418672</h3>
             <p class="contact-info"><span class="contact-info-header">Address:</span> 2627 Chatham Circle <br>Kissimmee,
                 FL 34746</p>
             <p class="contact-info">M-F 9am 5pm EST</p>
