--- a/contactUs.html
+++ b/contactUs.html
@@ -67,7 +67,6 @@
         <!-- NAV BAR BANGLA START -->
         <div class="bangla">
             <ul class="bangla-section">
-                <li><a href="calculatorBangla.html">ক্যালকুলেটর</a></li>
                 <li><a href="mortgageInfoBangla.html">মটগেজ তথ্য</a></li>
                 <li><a href="documentListBangla.html">ডকুমেন্ট লিস্ট</a></li>
                 <li><a href="faqsBangla.html">প্রশ্ন ও উত্তর</a></li>
@@ -81,9 +80,7 @@
     <!-- HEADER SECTION END -->
     <!-- MAIN SECTION START -->
     <section class="contactus">
-        <iframe title="" class="contact-maps"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4248.400548399734!2d-81.48490118459267!3d28.324574404702034!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88dd8185579284d3%3A0xeda2f0ec1ecbeecb!2s2627%20Chatham%20Cir%2C%20Kissimmee%2C%20FL%2034746%2C%20USA!5e1!3m2!1sen!2sbd!4v1679847804749!5m2!1sen!2sbd"
-                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        
                 <div class="contact-infos">
                     <div class="contact-info-sec">
                         <h1 class="contact-infos-title">Contact Information</h1>
@@ -164,9 +161,7 @@
         </div>
         <div class="contact">
             <h1 class="footer-title">Contact Us</h1>
-            <iframe title="" class="maps"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4248.400548399734!2d-81.48490118459267!3d28.324574404702034!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88dd8185579284d3%3A0xeda2f0ec1ecbeecb!2s2627%20Chatham%20Cir%2C%20Kissimmee%2C%20FL%2034746%2C%20USA!5e1!3m2!1sen!2sbd!4v1679847804749!5m2!1sen!2sbd"
-                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <h3 class="nmls">NMLS 2418672</h3>
             <p class="contact-info"><span class="contact-info-header">Address:</span> 2627 Chatham Circle <br>Kissimmee,
                 FL 34746</p>
             <p class="contact-info">M-F 9am 5pm EST</p>
