--- a/documentListBangla.html
+++ b/documentListBangla.html
@@ -85,62 +85,63 @@
         <h1 class="document-lists-title">Initial Pre-Qualification Document List</h1>
         <hr>
         <div class="document-list">
-            <h5 class="document-list-title">For a Mortgage 'Pre-Approval' Letter pls send the following to </h5>
+            <h5 class="document-list-title">Pre-Approval Pre-Qualification <br> প্রাক-অনুমোদন এর জন্য নিম্নলিখিত গুলি পাঠান- </h5>
             <div class="mail-section">
                 <a href="mailto:maruf@deshcapitalllc.com" class="mail">maruf@deshcapitalllc.com</a>
                 <a  class="mail">OR Fax at (407) 305 7002 </a>
             </div>
 
-            <div class="box">
-                <h5 class="box-text">The list below applies to EACH Mortgage APPLICANT(s) / Borrower(s) ONLY. <span class="color">Person(s) on Title but not on loan must only provide a copy of a valid ID.</span></h5>
-            </div>
+                <p class="document-list-text">তালিকাটি <span class="color">শুধুমাত্র</span> ঋণগ্রহীতার (দের) ক্ষেত্রে প্রযোজ্য।</p>
 
-            <h5 class="document-list-header">(A) Basic Document Set for PURCHASE loan</h5>
+            <h5 class="document-list-header">(ক) <strong>ক্রয় ঋণের</strong> জন্য প্রাথমিক ডকুমেন্ট সেট -</h5>
             <p class="document-list-text">
                 <ul class="document-list-list circle">
-                    <li><strong>Complete the credit pull authorization form (attached or online).</strong></li>
-                    <li>Copy of Govt. issued ID showing <strong>CURRENT address</strong> </li>
-                    <li>Copy of Social Security card/ ITIN number.</li>
-                    <li><strong>Last 2 months </strong>Personal bank statements-ALL pages, even blanks.</li>
-                    <li><strong>Last 30 days </strong>income statements* - pay stubs/ 1099 /rent /SSA 
-                        /SSI /Stock dividend /commission, etc are income also.</li>
-                        <li>Recent Personal Tax returns* - <strong>ALL pages </strong>with W2's /1099s etc. Prior </li>
-                        <li>Personal Tax returns* - <strong>ALL pages </strong>with W2's /1099s etc. </li>
+                    <li>ক্রেডিট পুল অনুমোদন ফর্মটি সম্পূর্ণ করুন, এবং ফেরত পাঠান</li>
+                    <li>সরকার অনুমদিত পরিচয়পত্র (ড্রইভিং লাইসেন্স, সটেট আইডি, পাসপোর্ট ইত্যাদি) এর কপি </li>
+                    <li>সোসাল সিকিউরিটি কার্ডের কপি (শুধু নম্বর হলেও চলবে)</li>
+                    <li>গত দুই মাসের ব্যাংক সটেট্মেন্ট (সকল পাতা, খালি পাতা হলেও)</li>
+                    <li>গত ৩০ দিনের সকল আয়ের প্রমান (পে স্টাব/কমিশন/ভাড়া/স্টক লভ্যাংশ  SSA/SSI/1099 ইত্যাদি)</li>
+                        <li>অতি সাম্প্রতিক বছরের পারসোনাল ট্যাক্স রিটার্ন - সকল পাতা, W2/1099 ইত্যাদি সহ</li>
+                        <li>গত সাম্প্রতিক বছরের পারসোনাল ট্যাক্স রিটার্ন - সকল পাতা, W2/1099 ইত্যাদি সহ</li>
+                        <li>যদি কোন ব্যাবসার ২০% এর অধিকের মালিক হন তবে গত ২ বছরের ট্যাক্স রিটার্ন - সকল পাতা</li>
                 </ul>
             </p>
-            <h5 class="document-list-header">(B)  For Re-financing loan - + (A) </h5>
+            <h5 class="document-list-header">(খ) ঋণ পুনরায় অর্থায়নের জন্য - + (ক)</h5>
             <p class="document-list-text">
                 <ul class="document-list-list square">
-                    <li>Current month's mortgage statement </li>
-                    <li>Current Home owner's insurance invoice copy</li>
-                    <li>HOA monthly/quarterly Statement, if any. </li>
-                    <li>LATEST monthly statement(s) for <strong>ALL items Refi is going to pay off.</strong></li>
-                    <li>Copy of lease, if the property is currently rented. </li>
+                    <li>গত মাসের বন্ধকী বিবৃতি</li>
+                    <li>বর্তমান বাড়ির মালিকের বীমা চালানের অনুলিপি</li>
                 </ul> 
             </p>
-            <h5 class="document-list-header">(C) IF Self employed (25%+ owner of the business where you work) + (A)</h5>
+            <h5 class="document-list-header">(গ) যদি স্ব-নিযুক্ত (25% + আপনি যেখানে কাজ করেন তার মালিক) + (ক)</h5>
             <p class="document-list-text">
                 <ul class="document-list-list circle">
-                    <li> Last 2 years' business tax returns - ALL pages </li>
-                    <li>Last 2 months' business bank statements. </li>
+                    <li>গত 2 বছরের ব্যবসায়িক ট্যাক্স রিটার্ন - সমস্ত পৃষ্ঠা</li>
+                    <li>গত 2 মাসের ব্যবসায়িক ব্যাংক স্টেটমেন্ট</li>
                 </ul>
             </p>
-            <h5 class="document-list-header">(D) For 2nd or further properties (even if shared with others) + (A)</h5>
+            
+
             <p class="document-list-text">
                 <ul class="document-list-list square">
-                   <li>For EACH property Owned ; </li> 
-                   <li>Last month's mortgage statement, if any</li>
-                   <li> Current Home owner's insurance invoice copy, if any.</li>
-                   <li>HOA monthly/quarterly Statement, if any</li>
-                   <li>Current Property Tax bill copy, all applicable</li>
-                   <li>Copy of lease, if the property is currently rented.</li>
+                   <li>মালিকানাধীন প্রতিটি সম্পত্তির জন্য,</li> 
+                   <li>গত মাসের বন্ধকী বিবৃতি, যদি থাকে</li>
+                   <li> বর্তমান বাড়ির মালিকের বীমা চালানের অনুলিপি</li>
+                   <li>HOA মাসিক / ত্রৈমাসিক বিবৃতি, যদি থাকে।</li>
                 </ul>
                 </p><br><br><br>
                 <p class="document-list-text">
                     <ul class="document-list-list circle">
-                        <li>Advise in advance if you plan to use Gift/DPA funds </li>
-                        <li>Advise in advance if you are 1st time home buyer. </li>
-                        <li><strong>If you are missing any document - ask for an alternate document list.  - <u>Particular loan scenarios/programs may call for additional document(s)</u> - More information provided at the beginning helps a SMOOTH APPROVAL. </strong></li>
+                        <li>আপনি যদি উপহার / ডিপিএ তহবিল ব্যবহার করার পরিকল্পনা করেন তবে দয়া করে আমাকে অগ্রিম জানান</li>
+                        </ul>
+                        </p>
+                        <p class="document-list-text">
+                            <ul class="document-list-list square">
+
+                        <li>আপনি যদি কোনও নথি অনুপস্থিত থাকেন তবে বিকল্প নথির তালিকার জন্য জিজ্ঞাসা করুন</li>
+                        <li>বিশেষ ঋণ পরিস্থিতি / প্রোগ্রাম অন্যান্য দস্তাবেজ (গুলি) এর জন্য কল করতে পারে</li>
+                        <li>শুরুতে আপনি আমাদের যত বেশি তথ্য সরবরাহ করবেন,</li>
+                        <li>মসৃণ অনুমোদনের জন্য সম্ভাবনাগুলি তত ভাল।</li>
                     </ul>
                     </p>
                     <div class="mail-section">
@@ -150,11 +151,11 @@
                     <div class="button-text-section">
                         <p class="document-list-text center">
                             <ul class="document-list-list square">
-                                <li><strong>* NOT needed for No Income/ No Ratio/ Alternate document loans.</strong></li>
+                                <li><strong>* কোন আয় / বিবৃত আয় ঋণ জন্য প্রয়োজন হয় না।   </strong></li>
                             </ul>
                             </p>
                             <div class="download-btns">
-                                <button class="download-btn" onclick="location.href='Assets/Documents/Initial_Pre_Qualification_Document_List_Bangla.pdf';">Download This Document</button>
+                                <button class="download-btn" onclick="location.href='Assets/Documents/Initial_Pre-Qualification_Document_List_Bangla.pdf';">ডকুমেন্টটি ডাউনলোড করুন</button>
                             </div>
     
                     </div>
