--- a/appointment.html
+++ b/appointment.html
@@ -39,31 +39,40 @@
                 </ul>
             </div>
         </div>
-        <nav>
-            <div class="menu-icon">
-                <span class="fas fa-bars"></span>
-            </div>
-            <div class="logo">
-                <a href="index.html"><img src="Assets/Images/Logo.jpg" alt="Loading..."></a>
-            </div>
-            <div class="nav-bar">
-                <ul>
-                    <li><a class="active" href="index.html">Home</a></li>
-                    <li><a href="calculator.html">Calculator</a></li>
-                    <li><a href="mortgageInfo.html">Mortgage Info.</a></li>
-                    <li><a href="documentList.html">Document List</a></li>
-                    <li><a href="appointment.html">Appointment</a></li>
-                    <li><a href="faqs.html">FAQs</a></li>
-                    <li><a href="aboutUs.html">About Us</a></li>
-                    <li><a href="contactUs.html">Contact Us</a></li>
-                    <li><a class="logactive" href="#">Login</a></li>
-                </ul>
-            </div>
-
-            <div class="cancel-btn">
-                <span class="fas fa-times"></span>
-            </div>
-        </nav>
+        <div class="hrader-sections">
+            <nav>
+                <input type="checkbox" id="show-menu">
+                <label for="show-menu" class="menu-icon"><i class="fas fa-bars"></i></label>
+                <div class="hrader-section">
+                    <div class="logo"><img src="Assets/Images/Logo.jpg" alt="">
+                        <p class="logo-text">NMLS 2418672</p>
+                    </div>
+                    <ul class="list">
+                        <li><a class="active" href="index.html">Home</a></li>
+                        <li>
+                            <a href="#" class="hrader-main-title">Calculator <i class="fas fa-angle-down"></i></a>
+                            <input type="checkbox" id="hrader-sub-title">
+                            <label for="hrader-sub-title">Calculator <i class="fas fa-angle-down"></i></label>
+                            <ul>
+                                <li><a href="#">Affordability Calculator</a></li>
+                                <li><a href="#">Monthly Payment Calculator</a></li>
+                                <li><a href="#">Rent VS Buy Calculator</a></li>
+                                <li><a href="#">Loan Comparison Calculator</a></li>
+                                <li><a href="#">Extra Payment Calculator</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="mortgageInfo.html">Mortgage Info.</a></li>
+                        <li><a href="documentList.html">Document List</a></li>
+                        <li><a href="appointment.html">Appointment</a></li>
+                        <li><a href="faqs.html">FAQs</a></li>
+                        <li><a href="aboutUs.html">About Us</a></li>
+                        <li><a href="contactUs.html">Contact Us</a></li>
+                        <li><a class="logactive" href="#">Login</a></li>
+    
+                    </ul>
+                </div>
+            </nav>
+        </div>
         <!-- NAV BAR BANGLA START -->
         <div class="bangla">
             <ul class="bangla-section">
