--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header>
         <div class="top-section">
             <div class="text-slider">
-                <h3 class="top-section-title">আপনাদের সেবায় নিয়োজিত ||| বাংলায় কথা বলি</h3>
+                <h3 class="top-section-title">আমরা বাংলায় কথা বলি ||| 844 337 4227</h3>
             </div>
             <div>
                 <ul class="icons">
@@ -94,8 +94,8 @@
     <section class="tmr-add-section">
         <div class="left-side">
             <div>
-                <h1 class="left-side-title">Today's Mortgage Rate <br> ( আজকের মর্টগেজ রিপোর্ট )</h1>
-                <p class="left-side-text">This is today's mortgage rate. For more update see here</p>
+                <h1 class="left-side-title">Today's Mortgage Rate ( আজকের মর্টগেজ রেট )</h1>
+                
                 <div class="slider-container">
                     <div class="slide-card">
                         <h5 class="tm-title">30 Year Fixed</h5>
