--- a/faqs.html
+++ b/faqs.html
@@ -26,7 +26,7 @@
     <header>
         <div class="top-section">
             <div class="text-slider">
-                <h3 class="top-section-title">আপনাদের সেবায় নিয়োজিত ||| বাংলায় কথা বলি</h3>
+                <h3 class="top-section-title">আমরা বাংলায় কথা বলি ||| 844 337 4227</h3>
             </div>
             <div>
                 <ul class="icons">
