--- a/mortgageInfo.html
+++ b/mortgageInfo.html
@@ -54,7 +54,7 @@
                             <input type="checkbox" id="hrader-sub-title">
                             <label for="hrader-sub-title">Calculator <i class="fas fa-angle-down"></i></label>
                             <ul>
-                                <li><a href="#">Affordability Calculator</a></li>
+                                <li><a href="affordabilityCalculator.html">Affordability Calculator</a></li>
                                 <li><a href="#">Monthly Payment Calculator</a></li>
                                 <li><a href="#">Rent VS Buy Calculator</a></li>
                                 <li><a href="#">Loan Comparison Calculator</a></li>
@@ -164,7 +164,6 @@
     <!-- FOOTER END -->
 
     <!-- JAVASCRIPT FILE LINK -->
-    <script src="Javascript/headers.js"></script>
     <script src="Javascript/feedback.js"></script>
 </body>
 
