--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
         <!-- Right Side Add Section START -->
         <div class="right-side">
-            <img class="right-side-img" src="Assets/Images/Adds/adds.jpeg" alt="Loading...">
+            <img class="right-side-img" src="Assets/Images/Adds/Add1.jpg" alt="Loading...">
             <img class="right-side-img" src="Assets/Images/Adds/adds.jpeg" alt="Loading...">
             <img class="right-side-img" src="Assets/Images/Adds/adds.jpeg" alt="Loading...">
             <img class="right-side-img" src="Assets/Images/Adds/adds.jpeg" alt="Loading...">
